Replace label with placeholder - animation issue on iOS

--- a/style.css
+++ b/style.css
@@ -66,18 +66,6 @@ body {
 .modal-input:focus {
   border: 2px solid var(--font-winner);
 }
-.modal-input:focus + .modal-label {
-  top: 0;
-  font-size: 18px;
-  color: var(--font-winner);
-}
-.modal-input:not(:focus):not(:placeholder-shown) + .modal-label {
-  visibility: hidden;
-  /* support for label to not move back to original position */
-  top: 0;
-  font-size: 18px;
-  color: var(--font-winner);
-}
 .modal-fieldset {
   border: none;
   margin: 0 auto;
@@ -176,7 +164,6 @@ footer {
   animation: fade-out 500ms forwards;
 }
 .modal-content {
-  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
